--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="description" content="Little Lemon - A delightful restaurant serving fresh, delicious meals every day. Enjoy our exquisite menu and warm atmosphere!" />
+    <meta name="og:title" content="Little Lemon - Fresh and Delicious Restaurant Experience"/>
+    <meta name="og:description" content="Discover Little Lemon - A cozy restaurant offering freshly prepared, mouth-watering dishes every day. Perfect for family gatherings and special occasions!"/>
+    <meta name="og:image" content="/images/little-lemon-logo.png"/>
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
@@ -29,15 +33,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
