Add unit tests for React components, refactor state management using useState and useReducer hooks

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" type="image/svg" href="public/icons_assets" />
+  <link rel="icon" href="%PUBLIC_URL%/icons_assets/lemon.ico" />
   <meta name="description" content="Little Lemon - A delightful restaurant serving fresh, delicious meals every day. Enjoy our exquisite menu and warm atmosphere!" />
   <meta name="og:title" content="Little Lemon - Fresh and Delicious Restaurant Experience"/>
   <meta name="og:description" content="Discover Little Lemon - A cozy restaurant offering freshly prepared, mouth-watering dishes every day. Perfect for family gatherings and special occasions!"/>
